2012-03-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/NewNeighbor.h: Include some basic stuff.

	* include/network/Makefile.am: Add NewOutputThread.h, NewNeighborThread.h.
	* src/network/Makefile.am: Add NewOutputThread.cpp, NewNeighborThread.cpp.

	* include/network/NewOutputThread.h: New file.
	* src/network/NewOutputThread.cpp: Likewise.
	* include/network/NewNeighborThread.h: Likewise.
	* src/network/NewNeighborThread.cpp: Likewise.

	* include/mcs/NewOutputDispatcher.h: Add Ptr type.
	* include/mcs/BackwardMessage.h: Likewise.

2012-02-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testAbstractContext.cpp: Fix testcases.

	* src/dmcs/DLVInstantiator.cpp: Init evaluator's mqs from here.
	* src/dmcs/Evaluator.cpp: Let Instantiator initialize mqs.

	* include/mcs/BridgeRuleEvaluator.h: Update heads with k1, k2.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.
	* include/mcs/Heads.h: Likewise.
	* src/dmcs/DLVEvaluator.cpp: Likewise.

	* include/dmcs/DLVEvaluator.h: Remove temporary method.
	* include/dmcs/Evaluator.h: Likewise.

	* include/mcs/NewContext.h: Set fixed pack_size for asking neighbors.
	Will be initiated from command line arguments.
	* src/mcs/NewContext.cpp: Likewise.
	* include/mcs/StreamingJoiner.h: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.
	* testsuite/testJoiner.cpp: Likewise.

	* testsuite/testDLVProcess.cpp: Add some remarks.
	* testsuite/testAbstractContext.cpp: Likewise.

	* testsuite/Makefile.am: Add testDLVProcess.

	* src/dmcs/DLVEvaluator.cpp: Clean up.
	* include/mcs/NewContext.h: Likewise.
	* src/mcs/NewContext.cpp: Likewise.

2012-02-24  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testDLVProcess.cpp: New file.

2012-02-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/DLVEvaluator.cpp: A dirty hack: sleep 1 microsec to deal with
	race conditions when deleting dlvprocess.

	* src/dmcs/Evaluator.cpp: Separate init_mqs().

	* include/mcs/Heads.h: Add comparison operators for heads.
